@@ -50,7 +50,7 @@ lib/gamebox/lib/publisher_ext.rb
 lib/gamebox/lib/sorted_list.rb
 lib/gamebox/lib/surface_ext.rb
 lib/gamebox/mode.rb
-lib/gamebox/mode_manager.rb
+lib/gamebox/stage_manager.rb
 lib/gamebox/physical_director.rb
 lib/gamebox/physical_level.rb
 lib/gamebox/physics.rb
