@@ -37,6 +37,5 @@ desc "Run all specs"
 Spec::Rake::SpecTask.new('spec') do |t|
   t.spec_files = FileList['spec/*_spec.rb']
 end
-task :test => :specs
 
 # vim: syntax=Ruby
