@@ -9,8 +9,6 @@ allow easy pausing of game and physics
   - fire :pause event w/ a new Director of actors? 
 change Polaris to return partial path when step max is reached
 update physical objects to use chipmunk_object.rb
-allow for repeating actors (tiles)
-allow overriding of animation timing
 
 make complex Phyiscal behaviors 
   - made up by a group of bodies pinned together
@@ -32,5 +30,4 @@ AI
 	 state machine
 	 rule based
 optional GUI via rubygoo
-particle system? ParticleGroupActor?
 gamebox server (content server?)
