@@ -1,19 +1,19 @@
 class Game
 
   constructor :wrapped_screen, :input_manager, :sound_manager,
-    :mode_manager
+    :stage_manager
 
   def setup
-    @mode_manager.change_mode_to :intro
+    @stage_manager.change_mode_to :intro
   end
 
   def update(time)
-    @mode_manager.update time
+    @stage_manager.update time
     draw
   end
 
   def draw
-    @mode_manager.draw @wrapped_screen
+    @stage_manager.draw @wrapped_screen
     @wrapped_screen.flip
   end
 
