@@ -59,3 +59,5 @@
 * merged in jacius' new event system
 * new physics playground example
 * new major ruby platformer example
+* merged Mode/Level into Stage
+* added curtain transitions
